# rzut-beretem

./: app.production.yaml  app.staging.yaml  pyproject.toml
.github/workflows/: deploy.yml  production.yml  staging.yml
translations/en/LC_MESSAGES/: messages.po
translations/pl/LC_MESSAGES/: messages.po
translations/uk/LC_MESSAGES/: messages.po
